processor/src/test/resources/validationExamples/bad/graph subject of method is void.java
// This file is compiled only in test.
package x;

import com.inrupt.rdf.wrapping.annotation.Graph;
import com.inrupt.rdf.wrapping.annotation.OptionalFirstSubjectOfEither;

@Graph
interface X {
    @OptionalFirstSubjectOfEither("x")
    void x();
}
